samples/_failures_safe/1761465336_3fbb52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be90bd79.c: In function ‘main’:
./samples/SAFE/__tmp_be90bd79.c:146:15: error: missing terminating " character
  146 |     if (scanf("%d %
      |               ^~~~~
./samples/SAFE/__tmp_be90bd79.c:146:5: error: expected expression at end of input
  146 |     if (scanf("%d %
      |     ^~
./samples/SAFE/__tmp_be90bd79.c:146:5: error: expected declaration or statement at end of input
